# eeprom-reader-writer-pico

./: .gitignore  CMakeLists.txt  eeprom.cpp  eeprom.hpp  main.cpp
src/: main.cpp
src/eeprom/: eeprom.cpp  eeprom.hpp
src/lib/74HC245/: C74HC245.cpp  C74HC245.hpp
src/lib/74HC595/: C74HC595.cpp  C74HC595.hpp
